--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 kotlin = "2.2.0"
-compose-multiplatform = "1.10.0-alpha01"
+compose-multiplatform = "1.10.0"
 dokka = "2.0.0"
 
 [plugins]
